Aggiunto template Piano di Progetto

--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -85,7 +85,7 @@
 \newcommand{\progrs}{\emph{Programmatori}}
 \newcommand{\ver}{\emph{Verificatore}}
 \newcommand{\vers}{\emph{Verificatori}}
-\newcommand{\gruppo}{\emph{VarTmp7}}
+\newcommand{\gruppo}{\emph{Sweleven}}
 
 % variabili - documenti
 \newcommand{\VersioneDiConsegna}{4.0.0-R1}
@@ -123,8 +123,8 @@
 
 % variabili - altro
 
-\newcommand{\emailgruppo}{vartmp7@gmail.com}
-\newcommand{\proponente}{Imola Informatica}
+\newcommand{\emailgruppo}{TODO}
+\newcommand{\proponente}{TODO}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
