--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -72,35 +72,36 @@
 
 % variabili - ruoli
 
-\newcommand{\adm}{\emph{Amministratore}}
-\newcommand{\adms}{\emph{Amministratori}}
-\newcommand{\ana}{\emph{Analista}}
-\newcommand{\anas}{\emph{Analisti}}
-\newcommand{\prog}{\emph{Progettista}}
-\newcommand{\progs}{\emph{Progettisti}}
-\newcommand{\RdP}{\emph{Responsabile di Progetto}}
-\newcommand{\Res}{\emph{Responsabile}}
-\newcommand{\reda}{\emph{Redattore}}
-\newcommand{\progr}{\emph{Programmatore}}
-\newcommand{\progrs}{\emph{Programmatori}}
-\newcommand{\ver}{\emph{Verificatore}}
-\newcommand{\vers}{\emph{Verificatori}}
-\newcommand{\gruppo}{\emph{Sweleven}}
+\newcommand{\admin}{\emph{Amministratore}}
+\newcommand{\admins}{\emph{Amministratori}}
+\newcommand{\analista}{\emph{Analista}}
+\newcommand{\analisti}{\emph{Analisti}}
+\newcommand{\progettista}{\emph{Progettista}}
+\newcommand{\progettisti}{\emph{Progettisti}}
+\newcommand{\responsabilediprogetto}{\emph{Responsabile di Progetto}}
+\newcommand{\responsabile}{\emph{Responsabile}}
+\newcommand{\redattore}{\emph{Redattore}}
+\newcommand{\programmatore}{\emph{Programmatore}}
+\newcommand{\programmatori}{\emph{Programmatori}}
+\newcommand{\verificatore}{\emph{Verificatore}}
+\newcommand{\verificatori}{\emph{Verificatori}}
+% \newcommand{\gruppo}{\emph{Sweleven}}
+\newcommand{\Gruppo}{Sweleven}
 
 % variabili - documenti
-\newcommand{\VersioneDiConsegna}{4.0.0-R1}
-\newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
-\newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
-\newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
-\newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
-\newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
-\newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
-\newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
-\newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
-\newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
-\newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
-\newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
-\newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
+% \newcommand{\VersioneDiConsegna}{4.0.0-R1}
+% \newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
+% \newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
+% \newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
+% \newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
+% \newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
+% \newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
+% \newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
+% \newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
+% \newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
+% \newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
+% \newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
+% \newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
 
 \newcommand{\AdR}{\emph{Analisi dei requisiti}}
 \newcommand{\SdF}{\emph{Studio di fattibilit\`{a}}}
@@ -123,7 +124,7 @@
 
 % variabili - altro
 
-\newcommand{\emailgruppo}{TODO}
+\newcommand{\Mail}{TODO}
 \newcommand{\proponente}{TODO}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
@@ -131,6 +132,8 @@
 \newcommand{\RP}{Revisione di Progettazione}
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
+
+\newcommand{\NomeProgetto}{TODO}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
