--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
@@ -1,21 +1,15 @@
 \newcommand{\Titolo}{Analisi Dei Requisiti}
 
-\newcommand{\Gruppo}{Sweleven}
-
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Verificatori}{TODO \newline TODO}
 \newcommand{\Redattori}{TODO \newline TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{\VersioneDiConsegna}
+\newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline TODO \newline Sweleven }
 
 \newcommand{\Uso}{Esterno}
-
-\newcommand{\NomeProgetto}{}
-
-\newcommand{\Mail}{TODO}
 
 \newcommand{\DescrizioneDoc}{TODO}
