--- a/DocumentiEsterni/Glossario/src/Comandi.tex
+++ b/DocumentiEsterni/Glossario/src/Comandi.tex
@@ -1,21 +1,15 @@
 \newcommand{\Titolo}{Glossario}
 
-\newcommand{\Gruppo}{Sweleven}
-
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Verificatori}{TODO}
 \newcommand{\Redattori}{TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{\VersioneDiConsegna}
+\newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega  \newline Prof. Riccardo Cardin  \newline TODO \newline Sweleven }
 
 \newcommand{\Uso}{Esterno}
-
-\newcommand{\NomeProgetto}{}
-
-\newcommand{\Mail}{TODO}
 
 \newcommand{\DescrizioneDoc}{TODO}
