--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -1,7 +1,5 @@
 \newcommand{\Titolo}{Piano di Progetto}
 
-\newcommand{\Gruppo}{Sweleven}
-
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Redattori}{TODO \newline TODO}
 \newcommand{\Verificatori}{TODO}
@@ -9,7 +7,7 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{\VersioneDiConsegna}
+\newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{
 Prof.
@@ -19,9 +17,5 @@ Riccardo Cardin \newline
 TODO \newline Sweleven}
 
 \newcommand{\Uso}{Esterno}
-
-\newcommand{\NomeProgetto}{}
-
-\newcommand{\Mail}{TODO}
 
 \newcommand{\DescrizioneDoc}{}
