--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -1,22 +1,16 @@
 \newcommand{\Titolo}{Piano di Qualifica}
 
-\newcommand{\Gruppo}{Sweleven}
-
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Redattori}{TODO \newline TODO}
 \newcommand{\Verificatori}{TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{\VersioneDiConsegna}
+\newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline TODO \newline Sweleven}
 
 \newcommand{\Uso}{Esterno}
-
-\newcommand{\NomeProgetto}{TODO}
-
-\newcommand{\Mail}{TODO}
 
 \newcommand{\DescrizioneDoc}{TODO}
 
