--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -1,6 +1,5 @@
 \newcommand{\Titolo}{Norme di Progetto}
 
-\newcommand{\Gruppo}{Sweleven}
 \newcommand{\Prodotto}{TODO}
 
 \newcommand{\Approvatore}{TODO}
@@ -9,15 +8,11 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{\VersioneDiConsegna}
+\newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
 \newcommand{\Uso}{Interno}
-
-\newcommand{\NomeProgetto}{TODO}
-
-\newcommand{\Mail}{TODO}
 
 \newcommand{\DescrizioneDoc}{TODO.}
 
