--- a/DocumentiInterni/Verbali/TemplateVerbale/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/TemplateVerbale/src/Comandi.tex
@@ -1,6 +1,4 @@
-\newcommand{\Titolo}{Verbale INTERNO/ESTERNO del DATA}
-
-\newcommand{\Gruppo}{Sweleven}
+\newcommand{\Titolo}{Verbale interno del DATA}
 
 \newcommand{\Approvatore}{}
 \newcommand{\Redattori}{}
@@ -8,14 +6,10 @@
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{X.X.X}
 
-\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline XXX \newline Sweleven}
+\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
-\newcommand{\Uso}{INTERNO/ESTERNO}
+\newcommand{\Uso}{Interno}
 
-\newcommand{\NomeProgetto}{}
-
-\newcommand{\Mail}{TODO}
-
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{VarTmp7} con \textit{XXX} tenutosi il DATA.}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con \textit{XXX} tenutosi il DATA.}
