Updated build script with new folder layout

--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -3,7 +3,7 @@
 \usepackage{../../Shared/Sweleven}
 \usepackage{csquotes}
 \usepackage{graphicx}
-\input{./src/comandi.tex}
+\input{./src/Comandi.tex}
 \DeclareUnicodeCharacter{2212}{-}
 
 \begin{document}
