Aggiunto esempio di registro delle modifiche

--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -14,6 +14,7 @@
 \begin{document}
     \copertina{}
     
+    \section*{Registro delle modifiche}\label{sec:Registro-modifiche}
     \input{src/RegistroModifiche.tex}
     
     \newpage
