--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -137,6 +137,13 @@
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
+
+% Colors
+\newcommand{\evenRowColor}{lightgray}
+\newcommand{\oddRowColor}{white}
+\newcommand{\primaryColor}{Blue}
+\newcommand{\secondaryColor}{white}
+
 \newcommand{\contaRiga}[1]{{#1-\stepcounter{rowcount}\therowcount \hspace*{\tabcolsep}}}
 % header e footer
 
