--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -10,6 +10,7 @@
 
 \copertina{}
 
+\section*{Registro delle modifiche}\label{sec:Registro-modifiche}
 \input{./src/RegistroModifiche.tex}
 
 \newpage
