--- a/DocumentiInterni/Verbali/TemplateVerbale/main.tex
+++ b/DocumentiInterni/Verbali/TemplateVerbale/main.tex
@@ -6,6 +6,7 @@
 \begin{document}
     \copertina{}
 
+    \section*{Registro delle modifiche}\label{sec:Registro-modifiche}
     \input{src/RegistroModifiche.tex}
     
     \newpage
