Aggiornato processo di fornitura

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/main.tex
@@ -1,5 +1,5 @@
-\section{Fornitura}\label{sec:Fornitura}
+\subsection{Fornitura}\label{sec:Fornitura}
 \input{src/ProcessiPrimari/src/Fornitura/main.tex}
 
-\section{Sviluppo}\label{sec:Sviluppo}
+\subsection{Sviluppo}\label{sec:Sviluppo}
 \input{src/ProcessiPrimari/src/Sviluppo/main.tex}
