--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex
@@ -1,8 +1,23 @@
-\subsubsection{Studio di fattibilit\`{a}}
-\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/StudioDiFattibilita.tex}
+\subsubsection{Inizializzazione}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Inizializzazione.tex}
 
-\subsubsection{Piano di progetto}
-\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/PianoDiProgetto.tex}
+\subsubsection{Preparazione della risposta}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/PreparazioneDellaRisposta.tex}
 
-\subsubsection{Piano di qualifica}
-\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/PianoDiQualifica.tex}
+\subsubsection{Pianificazione}\label{sec:Pianificazione}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Pianificazione.tex}
+
+\subsubsection{Esecuzione e controllo}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/EsecuzioneControllo.tex}
+
+\subsubsection{Revisione e valutazione}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/RevisioneValutazione.tex}
+
+\subsubsection{Rilascio e completamento}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/RilascioCompletamento.tex}
+
+\subsubsection{Metriche}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Metriche.tex}
+
+\subsubsection{Strumenti}
+\input{src/ProcessiPrimari/src/Fornitura/src/Attivita/src/Strumenti.tex}
