--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -72,8 +72,8 @@
 
 % variabili - ruoli
 
-\newcommand{\admin}{\emph{Amministratore}}
-\newcommand{\admins}{\emph{Amministratori}}
+\newcommand{\amministratore}{\emph{Amministratore}}
+\newcommand{\amministratori}{\emph{Amministratori}}
 \newcommand{\analista}{\emph{Analista}}
 \newcommand{\analisti}{\emph{Analisti}}
 \newcommand{\progettista}{\emph{Progettista}}
@@ -89,32 +89,32 @@
 \newcommand{\Gruppo}{Sweleven}
 
 % variabili - documenti
-% \newcommand{\VersioneDiConsegna}{4.0.0-R1}
-% \newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
-% \newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
-% \newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
-% \newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
-% \newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
-% \newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
-% \newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
-% \newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
-% \newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
-% \newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
-% \newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
-% \newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
+\newcommand{\VersioneDiConsegna}{4.0.0-R1}
+\newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
+\newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
+\newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
+\newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
+\newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
+\newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
+\newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
+\newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
+\newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
+\newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
+\newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
+\newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
 
-\newcommand{\AdR}{\emph{Analisi dei requisiti}}
-\newcommand{\SdF}{\emph{Studio di fattibilit\`{a}}}
-\newcommand{\VI}{\emph{Verbale interno}}
-\newcommand{\NdP}{\emph{Norme di progetto}}
-\newcommand{\PdP}{\emph{Piano di progetto}}
-\newcommand{\PdQ}{\emph{Piano di qualifica}}
-\newcommand{\SP}{\emph{Specifica tecnica}}
-\newcommand{\DdP}{\emph{Definizion di prodotto}}
-\newcommand{\G}{\emph{Glossario}}
-\newcommand{\MU}{\emph{Manuale utente}}
-\newcommand{\MS}{\emph{Manuale sviluppatore}}
-\newcommand{\VE}{\emph{Verbale esterno}}
+% \newcommand{\AdR}{\emph{Analisi dei requisiti}}
+% \newcommand{\SdF}{\emph{Studio di fattibilit\`{a}}}
+% \newcommand{\VI}{\emph{Verbale interno}}
+% \newcommand{\NdP}{\emph{Norme di progetto}}
+% \newcommand{\PdP}{\emph{Piano di progetto}}
+% \newcommand{\PdQ}{\emph{Piano di qualifica}}
+% \newcommand{\SP}{\emph{Specifica tecnica}}
+% \newcommand{\DdP}{\emph{Definizion di prodotto}}
+% \newcommand{\G}{\emph{Glossario}}
+% \newcommand{\MU}{\emph{Manuale utente}}
+% \newcommand{\MS}{\emph{Manuale sviluppatore}}
+% \newcommand{\VE}{\emph{Verbale esterno}}
 
 
 %\newcommand{\PdPv}{\emph{PianoDiProgetto\_v1.0.0}}
