--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/main.tex
@@ -1,3 +1,6 @@
+\subsection{Scopo}\label{sec:Scopo}
+\input{src/ProcessiPrimari/src/Fornitura/src/scopo.tex}
+
 \subsection{Attivit\`{a}}
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex}
 
