--- a/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
@@ -1,6 +1,6 @@
 \subsection{Informazioni generali}
 Il capitolato in esame è intitolato "GDP Gathering Detection Platform", proposto dall'azienda Sync Lab mentre i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
-\subsection{Descrizione del capitolo}
+\subsection{Descrizione del capitolato}
 L'azienda propone la creazione di un prototipo software in grado di acquisire ed elaborare dei dati per fornire una panoramica sulle possibili zone di assembramento di persone.
 Questi dati potranno essere acquisiti da telecamere, contapersone, servizi Google, orari dei mezzi di trasporto pubblici e flussi di prenotazione Uber.
 Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e cercare di prevenire gli ingorghi.
