--- a/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
@@ -1,6 +1,6 @@
 \subsection{Informazioni generali}
-Il capitolato in esame è intitolato "PORTACS: piattaforma di controllo mobilità autonoma", proposto dall'azienda Sanmarco Informatica mentre i committenti sono il Prof. Tullio Vardanega ed ilProf. Riccardo Cardin.
-\subsection{Descrizione del capitolo}
+Il capitolato in esame è intitolato "PORTACS: piattaforma di controllo mobilità autonoma", proposto dall'azienda Sanmarco Informatica mentre i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
+\subsection{Descrizione del capitolato}
 L'azienda propone la creazione di un motore di elaborazione in tempo reale, che gestisca delle entità guidandole attraverso percorsi evitando collisioni ed eventualmente trovando i percorsi più convenienti.
 Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il POI, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..)
 \subsection{Vincoli}
@@ -24,4 +24,4 @@ Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiung
 \subsection{Conclusioni}
 Il capitolato introduce molto bene la problematica da risolvere, ma non spiega le tecnologie da utilizzare e come eseguire l'implementazione.
 Non ha catturato l'attenzione del gruppo dato il fatto che tutto il sistema deve essere simulato, portando poca concretezza al progetto.
-È inoltre poco correlata l'implementazione per controllare auto a guida automona, camerieri robot, e muletti autonomi, non rendendo chiara la modalità di pensiero che si deve avere durante lo svolgimento.
+È inoltre poco correlata l'implementazione per controllare auto a guida automona, camerieri robot, e muletti autonomi, non rendendo chiara la modalità di pensiero che si deve avere durante lo svolgimento del capitolato.
