--- a/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
@@ -26,4 +26,8 @@ In questi incontri, normalmente fisici, viene redatto un verbale con un segretar
 
 \TermineGlossario{Inspection}
 \DefinizioneGlossario{Tecnica di verifica specifica per un certo contesto. È meno "costosa" del walkthrough e si basa idealmente su una checklist di elementi da verificare nell'oggetto in esame.}
+
+\TermineGlossario{IOS}
+\DefinizioneGlossario{(precedentemente iPhone OS) è un sistema operativo mobile sviluppato da Apple per iPhone, iPod touch e iPad (Dispositivi embedded del azienda Apple). È il secondo sistema operativo mobile più installato al mondo, dopo Android.}
+
 \clearpage
