--- a/DocumentiEsterni/Glossario/src/Alfabeto/L.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/L.tex
@@ -6,7 +6,7 @@
 \DefinizioneGlossario{È un protocollo standard per l'interrogazione e la modifica dei servizi di directory. Le informazioni vengono raggruppate e possono essere espresse come record di dati ed organizzate in maniera gerarchica.}
 
 \TermineGlossario{Lista degli accessi}
-\DefinizioneGlossario{Detta anche "storico degli accessi", contiene una lista degli ingressi o uscite che sono stati fatti dall'utente tracciato nei luoghi dell'organizzazione o più in generale nell'organizzazione. Essa contiene informazioni relative al luogo e all'organizzazione dove e avvenuto l'accesso, la data e l'ora è infine il tempo trascorso all'interno.}
+\DefinizioneGlossario{Detta anche "storico degli accessi", contiene una lista degli ingressi o uscite che sono stati fatti dall'utente tracciato nei luoghi dell'azienda. Essa contiene informazioni relative al luogo e i dati letti tramite RFID e altri.}
 
 \TermineGlossario{Logic Layer}
 \DefinizioneGlossario{Il “business logic layer” è il punto in cui si affrontano i problemi che il programma è stato creato per risolvere. Nel logic layer, le classi decidono quali informazioni sono necessarie per risolvere i problemi assegnati, richiedono tali informazioni dal livello di accesso, manipolandole come richiesto e restituiscono i risultati finali al livello di presentazione per la formattazione.}
@@ -18,6 +18,6 @@
 \DefinizioneGlossario{Procedura di uscita effettuata dal utente o dall'amministratore per uscire dell'applicazione nel caso dell'utente o dal Server nel caso dell'amministratore.}
 
 \TermineGlossario{Luogo di tracciamento}
-\DefinizioneGlossario{Identifica una superficie di estensione contenuta locata geograficamente all'interno del perimetro di tracciamento dell'organizzazione. Un luogo non può fuoriuscire dal perimetro di tracciamento dell'organizzazione. Ciascun luogo è riconducibile ad una organizzazione.}
+\DefinizioneGlossario{Identifica una superficie di estensione contenuta locata geograficamente all'interno del perimetro di tracciamento dell'organizzazione,con una relativa mappa delle macchine disponibii(ex. laboratorio)}
 
 \clearpage
