--- a/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
@@ -1,10 +1,4 @@
 \section{P}
-\TermineGlossario{Parametri (dell'organizzazione)}
-\DefinizioneGlossario{Con parametri dell'organizzazione si intende l'insieme di: nome dell'organizzazione, immagine dell'organizzazione, descrizione dell'organizzazione, indirizzo dell'organizzazione, perimetro di tracciamento dell'organizzazione, l'insieme di luoghi di tracciamento.}
-
-\TermineGlossario{Perimetro di tracciamento dell'organizzazione}
-\DefinizioneGlossario{È la superficie geografica dove gli utenti dell'applicazione verranno tracciati per l'organizzazione in questione.}
-
 \TermineGlossario{Platform as a Service (PAAS)}
 \DefinizioneGlossario{È un un servizio cloud tramite il quale un provider mette a disposizione un ambiente di sviluppo e degli appositi strumenti per ideare nuove applicazioni.}
 
@@ -39,7 +33,7 @@
 \DefinizioneGlossario{È un dimostratore eseguibile con lo scopo di rappresentare la Baseline per lo sviluppo del progetto. Il suo codice può essere usa-e-getta.}  %adattamento pagina pdf
 
 \TermineGlossario{PvE (player versus environment)}
-\DefinizioneGlossario{Si riferisce al giocatore che combatte i nemici controllati dal computer (personaggi non giocanti NPC)}  %adattamento pagina pdf
+\DefinizioneGlossario{Si riferisce al giocatore che combatte i nemici controllati dal computer(personaggi non giocanti NPC) o che affronta l'ambientazione in cui è ambientato questo gioco.}  %adattamento pagina pdf
 
 \TermineGlossario{Python}
 \DefinizioneGlossario{È un linguaggio di programmazione ad alto livello, orientato agli oggetti, adatto, tra gli altri usi, a sviluppare applicazioni distribuite, scripting, computazione numerica e system testing.}
