--- a/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
@@ -5,15 +5,9 @@
 \TermineGlossario{React}
 \DefinizioneGlossario{È una libreria open source di JavaScript per creare interfacce utente (UI).}
 
-\TermineGlossario{Read the Docs}
-\DefinizioneGlossario{Portale di hosting di documentazione (principalmente documentazione software, ma non ci sono limitazioni a riguardo) utilizzato dal gruppo per pubblicare, una volta completati, i manuali utente e manutentore.}
-
 \TermineGlossario{Redis}
 \DefinizioneGlossario{È un archivio di strutture di dati in memoria open source, utilizzato come database, cache e broker di messaggi. Supporta strutture di dati come stringhe, hash, elenchi, set, 
 set ordinati con query di intervallo, bitmap, hyperloglogs, indici geospaziali con query di raggio e flussi.}
-
-\TermineGlossario{Refresh manuale}
-\DefinizioneGlossario{L'utente di propria iniziativa invia una richiesta di aggiornamento della lista delle organizzazioni.}
 
 \TermineGlossario{Regressione lineare (RL)}
 \DefinizioneGlossario{La regressione formalizza e risolve il problema di una relazione funzionale tra variabili misurate sulla base di dati campionari estratti da un'ipotetica popolazione infinita.}
@@ -25,10 +19,10 @@ set ordinati con query di intervallo, bitmap, hyperloglogs, indici geospaziali c
 \DefinizioneGlossario{È un archivio dove vengono raccolti dati ed informazioni in formato digitale sulla base di metadati che ne permettono la rapida individuazione.}
 
 \TermineGlossario{Representational State Transfer (REST)}
-\DefinizioneGlossario{È uno stile architetturale software per i sistemi distribuiti e rappresenta un sistema di trasmissione di dati su HTTP senza ulteriori livelli; non prevede il concetto di sessione (stateless).}
+\DefinizioneGlossario{È uno stile architetturale software per i sistemi distribuiti e rappresenta un sistema di trasmissione di dati su protocollo HTTP senza ulteriori livelli; non prevede il concetto di sessione (stateless).}
 
 \TermineGlossario{Requisiti}
-\DefinizioneGlossario{È l'insieme di tutte le funzionalità che il prodotto software deve offrire e che sono definite nelle specifiche del proponente. I requisiti di possono dividere in tre categorie: obbligatori, desiderabili ed opzionali.}
+\DefinizioneGlossario{È l'insieme di tutte le funzionalità che il prodotto software deve offrire e che sono definite nelle specifiche del proponente. I requisiti si possono dividere in tre categorie: obbligatori, desiderabili ed opzionali.}
 
 \TermineGlossario{Responsabile}
 \DefinizioneGlossario{Ha l'incarico di pianificare, motivare, coordinare e controllare i membri del team. Il suo compito prevede inoltre l'approvazione dei documenti e l'emanazione di piani e scadenze. Ha l'onere di rappresentante del team presso l'azienda proponente.}
@@ -41,8 +35,5 @@ set ordinati con query di intervallo, bitmap, hyperloglogs, indici geospaziali c
 
 \TermineGlossario{Realtime system}
 \DefinizioneGlossario{termine informatico per sistemi hardware e software soggetti a un "vincolo in tempo reale", ad esempio dall'evento alla risposta del sistema.I programmi in tempo reale devono garantire la risposta entro limiti di tempo specificati(deadlines)}
-
-\TermineGlossario{RGP (Realtime gaming platform)}
-\DefinizioneGlossario{------------------------------------------------------------------------}
 
 \clearpage
