--- a/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
@@ -5,17 +5,11 @@
 \TermineGlossario{Telegram}
 \DefinizioneGlossario{Servizio di messaggistica istantanea, usato principalmente su smartphone ma disponibile anche per PC, molto simile secondo certi punti di vista a Slack o Discord per la sua possibilità di avere più canali. Viene usato dal gruppo per comunicare saltuariamente con il proponente, nei soli casi in cui non risponda alle e-mail.}
 
-\TermineGlossario{Timestamp}
-\DefinizioneGlossario{È una sequenza di caratteri che indicano la data e l'orario di entrata/uscita di un qualsiasi utente che utilizza l'applicazione stalker e che fa parte di quella determinata organizzazione.}
-
 \TermineGlossario{Toolkit}
 \DefinizioneGlossario{È un insieme di strumenti software di base, in genere librerie, usati per facilitare e uniformare lo sviluppo di applicazioni derivate più complesse.}
 
 \TermineGlossario{Tracciamento} 
-\DefinizioneGlossario{L'atto nella quale è avvenuta con successo il collegamento RFID tra dispositivo mobile munito dell'applicazione e il dispositivo reader del azienda. Questa funzione permette di tracciare gli utenti all'interno dell'area dell'azienda.}
-
-\TermineGlossario{Trigger asincroni}
-\DefinizioneGlossario{Sono trigger di eventi di modifica che vengono eseguiti in modo asincrono dopo il completamento di una transazione del database.}
+\DefinizioneGlossario{L'atto nella quale è avvenuta con successo il collegamento RFID tra il dispositivo mobile munito dell'applicazione del dipendente e il dispositivo reader dell' azienda. Questa funzione permette di tracciare gli utenti all'interno dell'area dell'azienda in modo più preciso }
 
 \TermineGlossario{TypeScript} 
 \DefinizioneGlossario{È un linguaggio di programmazione open source che estende la sintassi di JavaScript in modo che qualunque programma scritto in JavaScript sia anche in grado di funzionare 
