--- a/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
@@ -24,6 +24,9 @@ dall'utente.}
 \TermineGlossario{Analizzabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di facilitare la diagnosi sul software, individuando la causa di errori o malfunzionamenti qualora presenti.}
 
+\TermineGlossario{Android}
+\DefinizioneGlossario{Android è un sistema operativo per dispositivi mobili sviluppato da Google, progettato principalmente per sistemi embedded quali smartphone e tablet, con interfacce utente specializzate per televisori, automobili, orologi da polso, occhiali, e altri.E' basato sul kernel Linux.}
+
 \TermineGlossario{API (Application programming interface)}
 \DefinizioneGlossario{L'interfaccia di programmazione delle applicazioni sono set di definizioni e protocolli con i quali vengono realizzati ed integrati software applicativi. Consentono ai  prodotti o servizi di comunicare con altri prodotti o servizi senza sapere come vengono implementati, semplificando così lo sviluppo delle applicazioni.}
 
