--- a/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
@@ -6,22 +6,13 @@
 \DefinizioneGlossario{Linguaggio di markup molto semplice, per realizzare con semplicità contenuti testuali. Viene utilizzato dal gruppo per realizzare i manuali utente e manutentore, ma viene utilizzato implicitamente anche su GitHub quando si crea un issue, in quanto linguaggio di default.}
 
 \TermineGlossario{Maturità}
-\DefinizioneGlossario{Capacità di un prodotto software di evitare che si verifichino errori errori o siano prodotti risultati non corretti in fase di esecuzione.}
-
-\TermineGlossario{Maven}
-\DefinizioneGlossario{È uno strumento di build automation utilizzato prevalentemente nella gestione di progetti Java.}
+\DefinizioneGlossario{Capacità di un prodotto software di evitare che si verifichino errori o che siano prodotti risultati non corretti in fase di esecuzione.}
 
 \TermineGlossario{Merge}
 \DefinizioneGlossario{In italiano "fusione", è un comando di Git che permette di unire due rami (branch), includendo le modifiche eseguite a carico di un ramo in un altro.}
 
 \TermineGlossario{Milestone}
 \DefinizioneGlossario{Momento nel ciclo di vita del software in cui è fissato il raggiungimento di un obiettivo specifico, a cui corrisponde una o più baseline.}
-
-\TermineGlossario{Mkdocs}
-\DefinizioneGlossario{Strumento di generazione di documentazione che permette al gruppo di realizzare i due manuali, utente e manutentore, sotto forma di sito web utilizzando come linguaggio prevalente Markdown. Oltre a Markdown è possibile utilizzare HTML.}
-
-\TermineGlossario{Modalità di tracciamento anonimo}
-\DefinizioneGlossario{È una specifica progettuale che da la possibilità all’utente che usufruisce dell’applicazione di essere tracciato all'interno dei luoghi dell'organizzazione ma nascondendo la sua identità fisica (nome, cognome e altri dati personali reali) al servizio. Per poter riconoscere la presenza dell'utente all'interno del luogo, sarà associato un codice univoco che non identifica in alcun modo la sua identità fisica ma solo la sua presenza.}
 
 \TermineGlossario{Modalità di tracciamento autenticato}
 \DefinizioneGlossario{È una specifica progettuale che da la possibilità all’utente che usufruisce dell’applicazione di essere tracciato all'interno dei luoghi dell'organizzazione. Questa modalità riconosce l'identità fisica dell'utente tracciato (nome, cognome e altri dati personali reali).}
