--- a/DocumentiEsterni/Glossario/src/Comandi.tex
+++ b/DocumentiEsterni/Glossario/src/Comandi.tex
@@ -1,15 +1,22 @@
 \newcommand{\Titolo}{Glossario}
 
+\newcommand{\Prodotto}{TODO}
+
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Verificatori}{TODO}
-\newcommand{\Redattori}{TODO}
+\newcommand{\Redattori}{TODO \newline TODO \newline TODO}
+\newcommand{\Verificatori}{TODO \newline TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{X.X.X}
 
-\newcommand{\Distribuzione}{Prof. Tullio Vardanega  \newline Prof. Riccardo Cardin  \newline TODO \newline Sweleven }
+\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
-\newcommand{\Uso}{Esterno}
+\newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{TODO}
+\newcommand{\DescrizioneDoc}{TODO.}
+
+\newcommand{\TermineGlossario}[1]{\textbf{#1}\\}
+\newcommand{\DefinizioneGlossario}[1]{#1\\ \\}
+\newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
+\newcommand{\mysubparagraph}[1]{\subparagraph{#1}\mbox{}\\}
