--- a/DocumentiEsterni/Glossario/src/Riferimenti.tex
+++ b/DocumentiEsterni/Glossario/src/Riferimenti.tex
@@ -3,7 +3,7 @@
 \begin{itemize}
 \item \textbf{Enciclopedia Treccani}: \url{http://www.treccani.it/enciclopedia/};
 \item \textbf{Wikipedia (en)}: \url{https://en.wikipedia.org/};
-\item \textbf{AWS Amazon}: \URL{https://aws.amazon.com/it/};
+\item \textbf{AWS Amazon}: \url{https://aws.amazon.com/it/};
 \item \textbf{Guide to the Software Engineering Body of Knowledge};
 \item \textbf{Software Engineering (10th edition) - Ian Sommerville}.
 \end{itemize}
