--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -80,4 +80,4 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 \end{itemize}
 
 \subsection{Conclusioni}
-
+Questo capitolato ha attirato subito l'attenzione di molti membri del gruppo. Seppure non di semplice svolgimento, le tecnologie che coinvolge sono stimolanti e di grande interesse perchè molto usate al giorno d'oggi ed offrono un bagaglio di conoscenze molto utili ed apprezzate nel campo professionale. Pertanto questo progetto è stato selezionato come prima scelta da parte del gruppo.
