--- a/DocumentiInterni/StudioDiFattibilita/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/main.tex
@@ -42,4 +42,8 @@
 \section{C6}\label{sec:C6}
 \input{src/C6/main.tex}
 
+\newpage
+\section{C7}\label{sec:C7}
+\input{src/C7/main.tex}
+
 \end{document}
