aggiunto src di C2

--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -1,43 +1,21 @@
 \subsection{Informazioni generali}
-\begin{itemize}
-\item {\bf Nome:} 	EmporioLambda: piattaforma di e-commerce in stile Serverless;
-\item {\bf Proponente:} Red Babel;
-\item {\bf Committente:} Prof. Tullio Vardanega e Prof. Riccardo Cardin.
-\end{itemize}
+\input{src/Informazioni generali.tex}
 
 
 \subsection{Descrizione}
-EmporioLambda mira alla creazione di una piattaforma web serverless di vendita e/o acquisto di beni o servizi che utilizzano internet e il trasferimento di denaro e dati che permettono queste transizioni.
+\input{src/Descrizione.tex}
 
-\subsection{Finalità del progetto}
-Lo scopo del progetto è creare un'applicazione web di e-commerce dove i protagonisti saranno i clienti che acquisteranno diversi articoli sia fisici che di tipo servizi e i venditori dove metteranno a disposizione diversi beni. 
+\subsection{FinalitÃ  del progetto}
+\input{src/Finalita del progetto.tex}
 
 \subsection{Tecnologie interessate}
-\begin{itemize}
-\item {\bf Amazon Web Services(AWS):} insieme di servizi di cloud computing utili per il progetto tra cui:
-\begin{enumerate}
-\item {\bf Lambda:} AWS Lambda servizio di elaborazione serverless per l'esecuzione del proprio codice. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
-\item {\bf API gateway:} servizio API per la comunicazione con Lambda;
-\item {\bf DynamoDB:} database non relazionale, orientato a dati valore-chiave e documenti;
-\item {\bf CloudWatch:} servizio di monitoraggio e osservabilità creato per ingegneri, sviluppatori, ingegneri responsabili dell'affidabilità del sito (SRE) e manager IT DevOps;
-\end{enumerate}
-\item {\bf NodeJs:} piattaforma open source per l'esecuzione di codice JavaScript(TypeScript) server-side;
-\item {\bf Next.js:} framework web di sviluppo front-end React open source che abilita funzionalità come il rendering lato server e la generazione di siti web statici per applicazioni web basate su React. 
-\end{itemize}
+\input{src/Tecnologie interessate.tex}
+
 \subsection{Aspetti positivi}
-\begin{itemize}
-\item possibilità di imparare nuovi linguaggi di programmazione come  Typescript;
-\item possibilità di imparare ad utilizzare servizi cloud come Amazon Web Services;
+\input{src/Aspetti positivi.tex}
 
-\end{itemize}
-
-\subsection{Criticità e fattori di rischio}
-\begin{itemize}
-
-\item L'azienda proponente ha sede all'estero, quindi la comunicazione con i referenti sarà meno agevole rispetto ai rapporti con un'azienda che ha sede nel territorio nazionale;
-\item Il capitolato prevede l'utilizzo di tecnologie nuove, che quindi porteranno ad una mole di studio autonomo non indifferente.
-
-\end{itemize}
+\subsection{CriticitÃ  e fattori di rischio}
+\input{src/Criticita e fattori di rischio.tex}
 
 \subsection{Conclusioni}
-Nonostante tale capitolato abbia destato particolare interesse all'interno del team di lavoro, sia a livello tecnologico che di competenze curricolari, il gruppo si è mostrato più stimolato verso un altro progetto diversamente allettante.
+\input{src/Conclusioni.tex}
