--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -1,21 +1,21 @@
 \subsection{Informazioni generali}
-\input{src/Informazioni generali.tex}
+\input{src/Informazioni_generali.tex}
 
 
 \subsection{Descrizione}
 \input{src/Descrizione.tex}
 
 \subsection{Finalità del progetto}
-\input{src/Finalita del progetto.tex}
+\input{src/Finalita_del_progetto.tex}
 
 \subsection{Tecnologie interessate}
-\input{src/Tecnologie interessate.tex}
+\input{src/Tecnologie_interessate.tex}
 
 \subsection{Aspetti positivi}
-\input{src/Aspetti positivi.tex}
+\input{src/Aspetti_positivi.tex}
 
 \subsection{Criticità e fattori di rischio}
-\input{src/Criticita e fattori di rischio.tex}
+\input{src/Criticita_e_fattori_di_rischio.tex}
 
 \subsection{Conclusioni}
 \input{src/Conclusioni.tex}
