--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Strumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Strumenti.tex
@@ -1,1 +1,4 @@
-\begin{document}
+\subsection{Strumenti}
+\subsubsection{Latex}
+Per la creazione della documentazione del progetto $nomeprogetto, il gruppo SwEleven ha concordato per l’utilizzo del linguaggio di markup LaTeX, con editor desktop TexMaker/TexShop e compilatore LatexMK aggiornato alla versione $versione.
+
